# vultrino

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: book.toml  build.sh
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: http.md  mcp-tools.md
docs/src/components/: cli.md  mcp.md  proxy.md  web-ui.md
docs/src/deployment/: cloudflare.md  docker.md  local.md  overview.md  vps.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/guides/: ai-agents.md  credentials.md  policies.md  rbac.md
docs/src/llm/: full-reference.md  index.md
docs/src/plugins/: developing.md  installing.md  overview.md  pgp.md
examples/: README.md  basic-usage.sh  curl-examples.sh  gen_hash.rs  mcp-claude-config.json  multi-agent-setup.sh  python-client.py
landing/: index.html
plugins/pgp-signing/: Cargo.toml  pgp_signing.wasm  plugin.toml
plugins/pgp-signing/src/: lib.rs
src/: lib.rs  main.rs
src/auth/: manager.rs  middleware.rs  mod.rs  types.rs
src/config/: mod.rs  types.rs
src/crypto/: encrypt.rs  mod.rs
src/mcp/: mod.rs  server.rs  types.rs
src/plugins/: ecdsa.rs  hmac.rs  http.rs  installer.rs  loader.rs  mod.rs  types.rs
src/plugins/wasm/: mod.rs  runtime.rs
src/policy/: mod.rs  types.rs
src/router/: matcher.rs  mod.rs  resolver.rs
src/server/: mod.rs
src/storage/: file.rs  mod.rs
src/web/: api.rs  auth.rs  mod.rs  routes.rs  server.rs  templates.rs
static/css/: style.css
templates/: audit.html  base.html  dashboard.html  error.html  layout.html  login.html
templates/credentials/: list.html  new.html
templates/keys/: list.html  new.html
templates/roles/: list.html  new.html
tests/: auth_integration.rs
