[package]
name = "vultrino"
version = "0.1.0"
edition = "2021"
description = "A credential proxy for the AI era - enabling AI agents to use credentials without seeing them"
license = "MIT"
repository = "https://github.com/zachyking/vultrino"
keywords = ["proxy", "credentials", "security", "ai", "llm"]
categories = ["authentication", "network-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP client for plugin requests
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Web UI server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "set-header"] }
tower-sessions = "0.14"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
bcrypt = "0.16"
cookie = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2"  # Constant-time comparison for security
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core", "schnorr"] }  # ECDSA secp256k1
sha3 = "0.10"  # Keccak256 for Ethereum

# WASM runtime for plugins
wasmtime = "29"
wasmtime-wasi = "29"

# OS integration (for future keychain support)
# keyring = "3"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"  # For session expiry
glob = "0.3"
url = "2"
urlencoding = "2"
bytes = "1"
http = "1"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
dirs = "6"
rpassword = "7"
zeroize = "1"
shellexpand = "3"
tempfile = "3"

# Future optional features
# ethers = { version = "2", optional = true }
# ed25519-dalek = { version = "2", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# crypto-signing = ["ethers", "ed25519-dalek"]

[[bin]]
name = "vultrino"
path = "src/main.rs"
