[package]
name = "pgp-signing"
version = "1.0.0"
edition = "2021"
description = "PGP/GPG signing plugin for Vultrino"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# PGP implementation
pgp = "0.14"
# For serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# For base64 encoding
base64 = "0.22"
# For random number generation
rand = "0.8"

[profile.release]
opt-level = "s"
lto = true
